--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -7,12 +7,11 @@
     }
   ],
   "functions": {
-    "api/*.js": {
-      "memory": 128,
-      "maxDuration": 1
+    "api/**": {
+      "runtime": "node16"
     }
   },
-    "routes": [
+  "routes": [
     {
       "src": "/(.*)",
       "dest": "/"
